# markitdown-pro

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/markitdown_pro/: __init__.py  cli.py  core.py  version.py
src/markitdown_pro/converters/: __init__.py  base.py  csv.py  docx.py  epub.py  html.py  json.py  markdown.py  pdf.py  text.py  xlsx.py  xml.py
